--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
-   <title>ME & Node</title>
+    <link rel="icon" href="./css/node.ico">
+    <title>ME & Node</title>
 </head>
 <body>
     
     <div class="hero">
         <div class="txt"> 
-            <h2>Love JS</h2>
-            <h3>Love Node</h3>
+            <h2>Show the world your projects</h2>
+           
+            <a href="/join"><button class="btn btn-success">Join Now</button></a>
         </div>
     </div>
 
         <div class="container-fluid ">
-                <div class="row nav">
-
+                <div class="row nav"> 
                     <div class="col-lg-6 col-sm-12">
 
                     <a href="/"><strong>ME & Node</strong></a>
